# windows-network-wfp-redirect

./: .gitignore  CMakeLists.txt  README.md  README.org  network-wfp-redirect-filter.sln
.github/: FUNDING.yml
network-filter-management/: network-filter-management.cpp  network-filter-management.vcxproj  network-filter-management.vcxproj.filters
network-proxy-server/: core_dump.cpp  debug.h  driver.cpp  driver.h  input_cmd.h  log.cpp  log.h  network-proxy-server.cpp  network-proxy-server.vcxproj  network-proxy-server.vcxproj.filters  service.cpp  service.h  utilities.h
network-wfp-redirect-filter/: CMakeLists.txt  debug.cpp  debug.h  driver.h  ex_allocate_pool.cpp  ex_allocate_pool.h  kernel_to_user.h  log.cpp  log.h  net_wfp_callout.cpp  net_wfp_callout.h  net_wfp_mon.h  net_wfp_rdr.cpp  net_wfp_rdr.h  netwfprdr.inf  network-wfp-redirect-filter.inf  network-wfp-redirect-filter.vcxproj  network-wfp-redirect-filter.vcxproj.filters  new.cpp  new.h  string.cpp  string.h  time.cpp
scripts/: update_test.cmd
